[project]
name = 'bepp'
version = '0.0.1'
description = 'An opinionated script to gather, clean up and merge transactions from Banca Etica and PayPal.'
readme = 'README.md'
requires-python = '>=3.13'
dependencies = [
	'currencyconverter>=0.17.34',
	'pandas>=2.2.3',
	'rich-argparse>=1.6.0',
	'rich>=13.9.4',
	'xlrd>=2.0.1'
]
